--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 margin: 0;
                 pointer-events: none;
 
-                &:after {
+                &:after:hover {
                     content: '';
                     position: absolute;
                     top: 0;
@@ -60,7 +60,7 @@
                 }
             }
 
-            html {
+            html:hover {
                 filter: saturate(1.8) contrast(1.2) brightness(1.1);
                 -webkit-filter: saturate(1.8) contrast(1.2) brightness(1.1);
             }
