--- a/index.html
+++ b/index.html
@@ -46,8 +46,9 @@
 
             body {
                 margin: 0;
-                pointer-events: none;
+            }
 
+            body:hover {
                 &:after:hover {
                     content: '';
                     position: absolute;
@@ -57,12 +58,10 @@
                     bottom: 0;
                     backdrop-filter: blur(7px);
                     mask: linear-gradient(black 10%, transparent 50%, black 90%);
-                }
-            }
 
-            html:hover {
-                filter: saturate(1.8) contrast(1.2) brightness(1.1);
-                -webkit-filter: saturate(1.8) contrast(1.2) brightness(1.1);
+                    filter: saturate(1.8) contrast(1.2) brightness(1.1);
+                    -webkit-filter: saturate(1.8) contrast(1.2) brightness(1.1);
+                }
             }
 
             iframe {
@@ -73,6 +72,7 @@
                 border: none;
                 width: 100%;
                 height: 100%;
+                pointer-events: none;
             }
         </style>
     </head>
