--- a/index.html
+++ b/index.html
@@ -59,9 +59,12 @@
                     backdrop-filter: blur(7px);
                     mask: linear-gradient(black 10%, transparent 50%, black 90%);
 
-                    filter: saturate(1.8) contrast(1.2) brightness(1.1);
-                    -webkit-filter: saturate(1.8) contrast(1.2) brightness(1.1);
                 }
+            }
+
+            html:hover {
+                filter: saturate(1.8) contrast(1.2) brightness(1.1);
+                -webkit-filter: saturate(1.8) contrast(1.2) brightness(1.1);
             }
 
             iframe {
