--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                     left: 0;
                     right: 0;
                     bottom: 0;
-                    backdrop-filter: blur(.15em);
+                    backdrop-filter: blur(7px);
                     mask: linear-gradient(black 10%, transparent 50%, black 90%);
                 }
             }
