--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     previous = cam;
                 }
 
-                window.setTimeout( switchCam, 60000 * 0.50 )
+                //window.setTimeout( switchCam, 60000 * 0.50 )
             }
         </script>
         <style>
