--- a/weather-cam/small.html
+++ b/weather-cam/small.html
@@ -34,7 +34,7 @@
                     previous = cam;
                 }
 
-                window.setTimeout( switchCam, 60000 * 10 )
+                //window.setTimeout( switchCam, 60000 * 10 )
             }
         </script>
         <style>
