--- a/index.html
+++ b/index.html
@@ -6,18 +6,7 @@
         <title>Document</title>
         <script>
             const cams = [
-                '-ya9gszERU0',
-                '15AYqnLbmDM',
-                'v_VQRn98Bk8',
-                'swA3cddVy78',
-                'X-BGNeHLX58',
-                '7Cg2BOM7XdY',
-                'l6EvTvOa1wc',
-                '62ua9iu8C-w',
-                'nlhg7Zppr18',
-                'ZjfFGJlkjmE',
-                'QbdzaWL9Xes',
-                '-aSqe8q5tew'
+                '-ya9gszERU0'
             ]
             let previous;
 
