--- a/index.html
+++ b/index.html
@@ -57,11 +57,10 @@
             iframe {
                 display: block;
                 position: absolute;
-                top: 0px;
+                top: 50%;
                 left: 0px;
                 border: none;
                 width: 100%;
-                height: 100%;
             }
         </style>
     </head>
