--- a/index.html
+++ b/index.html
@@ -57,10 +57,11 @@
             iframe {
                 display: block;
                 position: absolute;
-                top: 50%;
+                top: 0px;
                 left: 0px;
                 border: none;
                 width: 100%;
+                height: 100%;
             }
         </style>
     </head>
