--- a/weather-cam/small.html
+++ b/weather-cam/small.html
@@ -68,11 +68,11 @@
             iframe {
                 display: block;
                 position: absolute;
-                top: 0px;
+                top: 50%;
                 left: 0px;
                 border: none;
                 width: 100%;
-                height: 100%;
+                height: calc( (vw / 16) * 9 );
             }
         </style>
     </head>
