--- a/weather-cam/small.html
+++ b/weather-cam/small.html
@@ -71,8 +71,9 @@
                 top: 50%;
                 left: 0px;
                 border: none;
-                width: 100%;
-                height: calc( (vw / 16) * 9 );
+                width: 100vw;
+                height: calc( ( 100vw / 16 ) * 9 );
+                transform: translateY(-50%);
             }
         </style>
     </head>
