--- a/weather-cam/small.html
+++ b/weather-cam/small.html
@@ -56,7 +56,7 @@
                     right: 0;
                     bottom: 0;
                     backdrop-filter: blur(3px);
-                    mask: linear-gradient(black 10%, transparent 40%, transparent 90%);
+                    mask: linear-gradient(black 10%, transparent 40%, black 90%);
                 }
             }
 
