--- a/weather-cam/europaweg/index.html
+++ b/weather-cam/europaweg/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Zuiderplantsoen</title>
+        <title>Europaweg</title>
         <style>
             html, body{
                 width: 100%;
@@ -46,6 +46,6 @@
     </head>
 
     <body>
-        <iframe id="player" src="https://www.youtube.com/embed/swA3cddVy78?autoplay=1&mute=1&frameborder=0&controls=0"></iframe>
+        <iframe id="player" src="https://www.youtube.com/embed/X-BGNeHLX58?autoplay=1&mute=1&frameborder=0&controls=0"></iframe>
     </body>
 </html>
