--- a/weather-cam/index.html
+++ b/weather-cam/index.html
@@ -4,9 +4,21 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Document</title>
+        <style>
+            body {
+                display: grid;
+                grid-template-columns: auto auto auto auto;
+            }
+            body > a {
+            }
+        </style>
     </head>
 
     <body>
+        <a href="europaweg/">Europaweg</a>
+        <a href="europaweg-2/">Europaweg 2</a>
+        <a href="europaweg/">Europaweg</a>
+        <a href="europaweg-2/">Europaweg 2</a>
         <a href="europaweg/">Europaweg</a>
         <a href="europaweg-2/">Europaweg 2</a>
     </body>
