--- a/weather-cam/index.html
+++ b/weather-cam/index.html
@@ -17,9 +17,9 @@
     <body>
         <a href="europaweg/">Europaweg</a>
         <a href="europaweg-2/">Europaweg 2</a>
-        <a href="europaweg/">Europaweg</a>
-        <a href="europaweg-2/">Europaweg 2</a>
-        <a href="europaweg/">Europaweg</a>
-        <a href="europaweg-2/">Europaweg 2</a>
+        <a href="friesestraatweg/">Friesestraatweg</a>
+        <a href="gasunie/">Gasunie</a>
+        <a href="grote-markt/">Grote Markt</a>
+        <a href="hoofdstation/">Hoofdstation</a>
     </body>
 </html>
