--- a/weather-cam/index.html
+++ b/weather-cam/index.html
@@ -21,5 +21,16 @@
         <a href="gasunie/">Gasunie</a>
         <a href="grote-markt/">Grote Markt</a>
         <a href="hoofdstation/">Hoofdstation</a>
+        <a href="hoofdstation-2/">Hoofdstation 2</a>
+        <a href="julianaplein/">Julianaplein</a>
+        <a href="julianaplein-2/">Julianaplein 2</a>
+        <a href="laan-corpus-den-hoorn/">Laan Corpus den Hoord</a>
+        <a href="martinitoren/">Martinitoren</a>
+        <a href="overwinningsplein/">Overwinningsplein</a>
+        <a href="paterswoldseweg/">Paterswoldseweg</a>
+        <a href="stationsweg/">Stationsweg</a>
+        <a href="vrijheidsplein/">Vrijheidsplein</a>
+        <a href="winschoterdiep/">Winschoterdiep</a>
+        <a href="zuiderplantsoen/">Zuiderplantsoen</a>
     </body>
 </html>
