--- a/weather-cam/index.html
+++ b/weather-cam/index.html
@@ -4,33 +4,26 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Document</title>
-        <style>
-            body {
-                display: grid;
-                grid-template-columns: auto auto auto auto;
-            }
-            body > a {
-            }
-        </style>
+        <link rel="stylesheet" href="./_css/default.css">
     </head>
 
     <body>
-        <a href="europaweg/">Europaweg</a>
-        <a href="europaweg-2/">Europaweg 2</a>
-        <a href="friesestraatweg/">Friesestraatweg</a>
-        <a href="gasunie/">Gasunie</a>
-        <a href="grote-markt/">Grote Markt</a>
-        <a href="hoofdstation/">Hoofdstation</a>
-        <a href="hoofdstation-2/">Hoofdstation 2</a>
-        <a href="julianaplein/">Julianaplein</a>
-        <a href="julianaplein-2/">Julianaplein 2</a>
-        <a href="laan-corpus-den-hoorn/">Laan Corpus den Hoord</a>
-        <a href="martinitoren/">Martinitoren</a>
-        <a href="overwinningsplein/">Overwinningsplein</a>
-        <a href="paterswoldseweg/">Paterswoldseweg</a>
-        <a href="stationsweg/">Stationsweg</a>
-        <a href="vrijheidsplein/">Vrijheidsplein</a>
-        <a href="winschoterdiep/">Winschoterdiep</a>
-        <a href="zuiderplantsoen/">Zuiderplantsoen</a>
+        <a target="_blank" href="europaweg/">Europaweg</a>
+        <a target="_blank" href="europaweg-2/">Europaweg 2</a>
+        <a target="_blank" href="friesestraatweg/">Friesestraatweg</a>
+        <a target="_blank" href="gasunie/">Gasunie</a>
+        <a target="_blank" href="grote-markt/">Grote Markt</a>
+        <a target="_blank" href="hoofdstation/">Hoofdstation</a>
+        <a target="_blank" href="hoofdstation-2/">Hoofdstation 2</a>
+        <a target="_blank" href="julianaplein/">Julianaplein</a>
+        <a target="_blank" href="julianaplein-2/">Julianaplein 2</a>
+        <a target="_blank" href="laan-corpus-den-hoorn/">Laan Corpus den Hoord</a>
+        <a target="_blank" href="martinitoren/">Martinitoren</a>
+        <a target="_blank" href="overwinningsplein/">Overwinningsplein</a>
+        <a target="_blank" href="paterswoldseweg/">Paterswoldseweg</a>
+        <a target="_blank" href="stationsweg/">Stationsweg</a>
+        <a target="_blank" href="vrijheidsplein/">Vrijheidsplein</a>
+        <a target="_blank" href="winschoterdiep/">Winschoterdiep</a>
+        <a target="_blank" href="zuiderplantsoen/">Zuiderplantsoen</a>
     </body>
 </html>
