--- a/weather-cam/index.html
+++ b/weather-cam/index.html
@@ -8,22 +8,28 @@
     </head>
 
     <body>
-        <a target="_blank" href="europaweg/">Europaweg</a>
-        <a target="_blank" href="europaweg-2/">Europaweg 2</a>
-        <a target="_blank" href="friesestraatweg/">Friesestraatweg</a>
-        <a target="_blank" href="gasunie/">Gasunie</a>
-        <a target="_blank" href="grote-markt/">Grote Markt</a>
-        <a target="_blank" href="hoofdstation/">Hoofdstation</a>
-        <a target="_blank" href="hoofdstation-2/">Hoofdstation 2</a>
-        <a target="_blank" href="julianaplein/">Julianaplein</a>
-        <a target="_blank" href="julianaplein-2/">Julianaplein 2</a>
-        <a target="_blank" href="laan-corpus-den-hoorn/">Laan Corpus den Hoord</a>
-        <a target="_blank" href="martinitoren/">Martinitoren</a>
-        <a target="_blank" href="overwinningsplein/">Overwinningsplein</a>
-        <a target="_blank" href="paterswoldseweg/">Paterswoldseweg</a>
-        <a target="_blank" href="stationsweg/">Stationsweg</a>
-        <a target="_blank" href="vrijheidsplein/">Vrijheidsplein</a>
-        <a target="_blank" href="winschoterdiep/">Winschoterdiep</a>
-        <a target="_blank" href="zuiderplantsoen/">Zuiderplantsoen</a>
+        <div class="video-grid">
+            <div class="video-grid-cell large-cell">
+                <a target="_blank" href="europaweg/">Europaweg</a>
+            </div>
+            <div class="video-grid-cell">
+                <a target="_blank" href="europaweg-2/">Europaweg 2</a>
+            </div>
+            <a target="_blank" href="friesestraatweg/">Friesestraatweg</a>
+            <a target="_blank" href="gasunie/">Gasunie</a>
+            <a target="_blank" href="grote-markt/">Grote Markt</a>
+            <a target="_blank" href="hoofdstation/">Hoofdstation</a>
+            <a target="_blank" href="hoofdstation-2/">Hoofdstation 2</a>
+            <a target="_blank" href="julianaplein/">Julianaplein</a>
+            <a target="_blank" href="julianaplein-2/">Julianaplein 2</a>
+            <a target="_blank" href="laan-corpus-den-hoorn/">Laan Corpus den Hoord</a>
+            <a target="_blank" href="martinitoren/">Martinitoren</a>
+            <a target="_blank" href="overwinningsplein/">Overwinningsplein</a>
+            <a target="_blank" href="paterswoldseweg/">Paterswoldseweg</a>
+            <a target="_blank" href="stationsweg/">Stationsweg</a>
+            <a target="_blank" href="vrijheidsplein/">Vrijheidsplein</a>
+            <a target="_blank" href="winschoterdiep/">Winschoterdiep</a>
+            <a target="_blank" href="zuiderplantsoen/">Zuiderplantsoen</a>
+        </div>
     </body>
 </html>
