--- a/weather-cam/index.html
+++ b/weather-cam/index.html
@@ -8,6 +8,27 @@
     </head>
 
     <body>
+        <table>
+            <tr>
+                <td colspan="2" rowspan="2">
+                    <a target="_blank" href="winschoterdiep/">Winschoterdiep</a>
+                </td>
+                <td>
+                    <a target="_blank" href="europaweg/">Europaweg</a>
+                </td>
+                <td>
+                    <a target="_blank" href="europaweg-2/">Europaweg 2</a>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <a target="_blank" href="europaweg/">Europaweg</a>
+                </td>
+                <td>
+                    <a target="_blank" href="europaweg-2/">Europaweg 2</a>
+                </td>
+            </tr>
+        </table>
         <div class="video-grid">
             <div class="video-grid-cell large-cell">
                 <a target="_blank" href="europaweg/">Europaweg</a>
