--- a/weather-cam/index.html
+++ b/weather-cam/index.html
@@ -8,23 +8,23 @@
     </head>
 
     <body>
-        <table>
+        <table class="video-grid">
             <tr>
-                <td colspan="2" rowspan="2">
+                <td class="video-grid-cell large-cell" colspan="2" rowspan="2">
                     <a target="_blank" href="winschoterdiep/">Winschoterdiep</a>
                 </td>
-                <td>
+                <td class="video-grid-cell">
                     <a target="_blank" href="europaweg/">Europaweg</a>
                 </td>
-                <td>
+                <td class="video-grid-cell">
                     <a target="_blank" href="europaweg-2/">Europaweg 2</a>
                 </td>
             </tr>
             <tr>
-                <td>
+                <td class="video-grid-cell">
                     <a target="_blank" href="europaweg/">Europaweg</a>
                 </td>
-                <td>
+                <td class="video-grid-cell">
                     <a target="_blank" href="europaweg-2/">Europaweg 2</a>
                 </td>
             </tr>
