--- a/weather-cam/index.html
+++ b/weather-cam/index.html
@@ -22,65 +22,48 @@
             </tr>
             <tr>
                 <td class="video-grid-cell">
-                    <a target="_blank" href="europaweg/">Europaweg</a>
+                    <a target="_blank" href="friesestraatweg/">Friesestraatweg</a>
                 </td>
                 <td class="video-grid-cell">
-                    <a target="_blank" href="europaweg-2/">Europaweg 2</a>
+                    <a target="_blank" href="gasunie/">Gasunie</a>
+                </td>
+            </tr>
+            <tr>
+                <td class="video-grid-cell">
+                    <a target="_blank" href="grote-markt/">Grote Markt</a>
+                </td>
+                <td class="video-grid-cell">
+                    <a target="_blank" href="martinitoren/">Martinitoren</a>
+                </td>
+                <td class="video-grid-cell">
+                    <a target="_blank" href="julianaplein/">Julianaplein</a>
+                </td>
+                <td class="video-grid-cell">
+                    <a target="_blank" href="julianaplein-2/">Julianaplein 2</a>
+                </td>
+            </tr>
+            <tr>
+                <td class="video-grid-cell">
+                    <a target="_blank" href="stationsweg/">Stationsweg</a>
+                </td>
+                <td class="video-grid-cell">
+                    <a target="_blank" href="zuiderplantsoen/">Zuiderplantsoen</a>
+                </td>
+                <td class="video-grid-cell">
+                    <a target="_blank" href="vrijheidsplein/">Vrijheidsplein</a>
+                </td>
+                <td class="video-grid-cell">
+                    <a target="_blank" href="paterswoldseweg/">Paterswoldseweg</a>
+                </td>
+            </tr>
+            <tr>
+                <td class="video-grid-cell">
+                    <a target="_blank" href="laan-corpus-den-hoorn/">Laan Corpus den Hoord</a>
+                </td>
+                <td class="video-grid-cell">
+                    <a target="_blank" href="overwinningsplein/">Overwinningsplein</a>
                 </td>
             </tr>
         </table>
-        <div class="video-grid">
-            <div class="video-grid-cell large-cell">
-                <a target="_blank" href="europaweg/">Europaweg</a>
-            </div>
-            <div class="video-grid-cell">
-                <a target="_blank" href="europaweg-2/">Europaweg 2</a>
-            </div>
-            <div class="video-grid-cell">
-                <a target="_blank" href="friesestraatweg/">Friesestraatweg</a>
-            </div>
-            <div class="video-grid-cell">
-                <a target="_blank" href="gasunie/">Gasunie</a>
-            </div>
-            <div class="video-grid-cell">
-                <a target="_blank" href="grote-markt/">Grote Markt</a>
-            </div>
-            <div class="video-grid-cell">
-                <a target="_blank" href="hoofdstation/">Hoofdstation</a>
-            </div>
-            <div class="video-grid-cell">
-                <a target="_blank" href="hoofdstation-2/">Hoofdstation 2</a>
-            </div>
-            <div class="video-grid-cell">
-                <a target="_blank" href="julianaplein/">Julianaplein</a>
-            </div>
-            <div class="video-grid-cell">
-                <a target="_blank" href="julianaplein-2/">Julianaplein 2</a>
-            </div>
-            <div class="video-grid-cell">
-                <a target="_blank" href="laan-corpus-den-hoorn/">Laan Corpus den Hoord</a>
-            </div>
-            <div class="video-grid-cell">
-                <a target="_blank" href="martinitoren/">Martinitoren</a>
-            </div>
-            <div class="video-grid-cell">
-                <a target="_blank" href="overwinningsplein/">Overwinningsplein</a>
-            </div>
-            <div class="video-grid-cell">
-                <a target="_blank" href="paterswoldseweg/">Paterswoldseweg</a>
-            </div>
-            <div class="video-grid-cell">
-                <a target="_blank" href="stationsweg/">Stationsweg</a>
-            </div>
-            <div class="video-grid-cell">
-                <a target="_blank" href="vrijheidsplein/">Vrijheidsplein</a>
-            </div>
-            <div class="video-grid-cell">
-                <a target="_blank" href="winschoterdiep/">Winschoterdiep</a>
-            </div>
-            <div class="video-grid-cell">
-                <a target="_blank" href="zuiderplantsoen/">Zuiderplantsoen</a>
-            </div>
-        </div>
     </body>
 </html>
