--- a/weather-cam/index.html
+++ b/weather-cam/index.html
@@ -11,7 +11,10 @@
         <table class="video-grid">
             <tr>
                 <td class="video-grid-cell large-cell" colspan="2" rowspan="2">
-                    <a target="_blank" href="winschoterdiep/">Winschoterdiep</a>
+                    <a target="_blank" href="winschoterdiep/">
+                        <img src="./img/winschoterdiep.png" alt="">
+                        <label>Winschoterdiep</label>
+                    </a>
                 </td>
                 <td class="video-grid-cell">
                     <a target="_blank" href="europaweg/">Europaweg</a>
