--- a/weather-cam/index.html
+++ b/weather-cam/index.html
@@ -17,10 +17,16 @@
                     </a>
                 </td>
                 <td class="video-grid-cell">
-                    <a target="_blank" href="europaweg/">Europaweg</a>
+                    <a target="_blank" href="europaweg/">
+                        <img src="./img/europaweg.png" alt="">
+                        <label>Europaweg</label>
+                    </a>
                 </td>
                 <td class="video-grid-cell">
-                    <a target="_blank" href="europaweg-2/">Europaweg 2</a>
+                    <a target="_blank" href="boumaboulevard/">
+                        <img src="./img/boumaboulevard.png" alt="">
+                        <label>Boumaboulevard</label>
+                    </a>
                 </td>
             </tr>
             <tr>
