--- a/weather-cam/index.html
+++ b/weather-cam/index.html
@@ -31,10 +31,16 @@
             </tr>
             <tr>
                 <td class="video-grid-cell">
-                    <a target="_blank" href="friesestraatweg/">Friesestraatweg</a>
+                    <a target="_blank" href="zuiderplantsoen/">
+                        <img src="./img/zuiderplantsoen.png" alt="">
+                        <label>Zuiderplantsoen</label>
+                    </a>
                 </td>
                 <td class="video-grid-cell">
-                    <a target="_blank" href="gasunie/">Gasunie</a>
+                    <a target="_blank" href="friesestraatweg/">
+                        <img src="./img/boumaboulevard.png" alt="">
+                        <label><a target="_blank" href="gasunie/">Gasunie</label>
+                    </a>
                 </td>
             </tr>
             <tr>
@@ -71,6 +77,9 @@
                 </td>
                 <td class="video-grid-cell">
                     <a target="_blank" href="overwinningsplein/">Overwinningsplein</a>
+                </td>
+                <td class="video-grid-cell">
+                    <a target="_blank" href="friesestraatweg/">Friesestraatweg</a>
                 </td>
             </tr>
         </table>
