--- a/weather-cam/index.html
+++ b/weather-cam/index.html
@@ -37,9 +37,9 @@
                     </a>
                 </td>
                 <td class="video-grid-cell">
-                    <a target="_blank" href="friesestraatweg/">
-                        <img src="./img/boumaboulevard.png" alt="">
-                        <label><a target="_blank" href="gasunie/">Gasunie</label>
+                    <a target="_blank" href="julianaplein/">
+                        <img src="./img/julianaplein.png" alt="">
+                        <label>Julianaplein</label>
                     </a>
                 </td>
             </tr>
@@ -80,6 +80,9 @@
                 </td>
                 <td class="video-grid-cell">
                     <a target="_blank" href="friesestraatweg/">Friesestraatweg</a>
+                </td>
+                <td class="video-grid-cell">
+                    <a target="_blank" href="gasunie/">Gasunie</a>
                 </td>
             </tr>
         </table>
