--- a/weather-cam/index.html
+++ b/weather-cam/index.html
@@ -9,85 +9,11 @@
     </head>
 
     <body>
-        <table class="video-grid">
-            <!--
-            <tr>
-                <td class="video-grid-cell large-cell" colspan="2" rowspan="2">
-                    <a target="_blank" href="winschoterdiep/">
-                        <img src="./img/winschoterdiep.png" alt="">
-                        <label>Winschoterdiep</label>
-                    </a>
-                </td>
-                <td class="video-grid-cell">
-                    <a target="_blank" href="europaweg/">
-                        <img src="./img/europaweg.png" alt="">
-                        <label>Europaweg</label>
-                    </a>
-                </td>
-                <td class="video-grid-cell">
-                    <a target="_blank" href="boumaboulevard/">
-                        <img src="./img/boumaboulevard.png" alt="">
-                        <label>Boumaboulevard</label>
-                    </a>
-                </td>
-            </tr>
-            <tr>
-                <td class="video-grid-cell">
-                    <a target="_blank" href="zuiderplantsoen/">
-                        <img src="./img/zuiderplantsoen.png" alt="">
-                        <label>Zuiderplantsoen</label>
-                    </a>
-                </td>
-                <td class="video-grid-cell">
-                    <a target="_blank" href="julianaplein/">
-                        <img src="./img/julianaplein.png" alt="">
-                        <label>Julianaplein</label>
-                    </a>
-                </td>
-            </tr>
-            <tr>
-                <td class="video-grid-cell">
-                    <a target="_blank" href="grote-markt/">Grote Markt</a>
-                </td>
-                <td class="video-grid-cell">
-                    <a target="_blank" href="martinitoren/">Martinitoren</a>
-                </td>
-                <td class="video-grid-cell">
-                    <a target="_blank" href="julianaplein/">Julianaplein</a>
-                </td>
-                <td class="video-grid-cell">
-                    <a target="_blank" href="julianaplein-2/">Julianaplein 2</a>
-                </td>
-            </tr>
-            <tr>
-                <td class="video-grid-cell">
-                    <a target="_blank" href="stationsweg/">Stationsweg</a>
-                </td>
-                <td class="video-grid-cell">
-                    <a target="_blank" href="zuiderplantsoen/">Zuiderplantsoen</a>
-                </td>
-                <td class="video-grid-cell">
-                    <a target="_blank" href="vrijheidsplein/">Vrijheidsplein</a>
-                </td>
-                <td class="video-grid-cell">
-                    <a target="_blank" href="paterswoldseweg/">Paterswoldseweg</a>
-                </td>
-            </tr>
-            <tr>
-                <td class="video-grid-cell">
-                    <a target="_blank" href="laan-corpus-den-hoorn/">Laan Corpus den Hoord</a>
-                </td>
-                <td class="video-grid-cell">
-                    <a target="_blank" href="overwinningsplein/">Overwinningsplein</a>
-                </td>
-                <td class="video-grid-cell">
-                    <a target="_blank" href="friesestraatweg/">Friesestraatweg</a>
-                </td>
-                <td class="video-grid-cell">
-                    <a target="_blank" href="gasunie/">Gasunie</a>
-                </td>
-            </tr>
-            -->
-        </table>
+        <div class="flex-container">
+            <div class="video-container">
+                <table class="video-grid">
+                </table>
+            </div>
+        </div>
     </body>
 </html>
