--- a/weather-cam/hoofdstation/index.html
+++ b/weather-cam/hoofdstation/index.html
@@ -46,6 +46,6 @@
     </head>
 
     <body>
-        <iframe id="player" src="https://www.youtube.com/embed/-aSqe8q5tew?autoplay=1&mute=1&frameborder=0&controls=0"></iframe>
+        <iframe id="player" src="https://www.youtube.com/embed/nPyc6DSY3XY?autoplay=1&mute=1&frameborder=0&controls=0"></iframe>
     </body>
 </html>
