--- a/weather-cam/by-id/index.html
+++ b/weather-cam/by-id/index.html
@@ -8,9 +8,11 @@
 
             addEventListener( 'load', function() {
                 let args = location_getargs();
-
                 console.log( args );
-            } )
+
+                let frame = document.querySelector( '#player' );
+                frame.src = `https://www.youtube.com/embed/${ args.id }?autoplay=1&mute=1&frameborder=0&controls=0`;
+            } );
 
             function location_getargs () {
                 let argr = location.search.substring( 1 ).split( '&' );
@@ -19,12 +21,14 @@
                     let key_value = next.split( '=' );
                     args[ key_value[ 0 ] ] = key_value[ 1 ]? key_value[ 1 ] : true;
                 }
-            }
+
+                return args;
+            };
 
         </script>
     </head>
     
     <body>
-    
+        <iframe id="player"></iframe>
     </body>
 </html>
