Update hoofdstation stream ids

--- a/weather-cam/hoofdstation-2/index.html
+++ b/weather-cam/hoofdstation-2/index.html
@@ -46,6 +46,6 @@
     </head>
 
     <body>
-        <iframe id="player" src="https://www.youtube.com/embed/iV7-3k8FV2o?autoplay=1&mute=1&frameborder=0&controls=0"></iframe>
+        <iframe id="player" src="https://www.youtube.com/embed/xxjW1hCdg9s?autoplay=1&mute=1&frameborder=0&controls=0"></iframe>
     </body>
 </html>
