--- a/weather-cam/winschoterdiep/index.html
+++ b/weather-cam/winschoterdiep/index.html
@@ -9,6 +9,6 @@
     </head>
 
     <body>
-        <iframe id="player" src="https://www.youtube.com/embed/v_VQRn98Bk8?autoplay=1&mute=1&frameborder=0&controls=0"></iframe>
+        <iframe id="player" src="https://www.youtube.com/embed/ROvXvH1IywU?autoplay=1&mute=1&frameborder=0&controls=0"></iframe>
     </body>
 </html>
