--- a/weather-cam/by-id/index.html
+++ b/weather-cam/by-id/index.html
@@ -13,6 +13,8 @@
 
                 let frame = document.querySelector( '#player' );
                 frame.src = `https://www.youtube.com/embed/${ args.id }?autoplay=1&mute=1&frameborder=0&controls=0`;
+
+                document.body.setAttribute( 'blur', 'none' );
             } );
 
             function location_getargs () {
